--- a/mult-template.tex
+++ b/mult-template.tex
@@ -1,7 +1,7 @@
 \subj{} 
 \mult
 
-\begin{enumerate}[label={\scshape \Alph*)}]
+\begin{enumerate}[label={\scshape \alph*)}]
     \setcounter{enumii}{22}
 
     \ii 
