--- a/samples/mult-example.tex
+++ b/samples/mult-example.tex
@@ -1,7 +1,8 @@
 \subj{Biology} 
 \mult
+What is the correct answer?
 
-\begin{enumerate}[label={\scshape \Alph*)}]
+\begin{enumerate}[label={\scshape \alph*)}]
     \setcounter{enumii}{22}
 
     \ii
@@ -18,4 +19,4 @@
 
 \end{enumerate}
 
-\ans{Y) right}
+\ans{y) right}
