--- a/scibowl.sty
+++ b/scibowl.sty
@@ -42,10 +42,14 @@
 \newcommand{\sci}[1]{\import{/Users/diaoeous/Documents/LaTeX/Problems/-Statement/-Scibowl/}{#1.tex}}
 
 \newcommand{\subj}[1]{%
-    {\scshape \bfseries #1}
+    {\scshape\bfseries #1}
 }
-\newcommand{\mult}{\textit{Multiple Choice}}
-\newcommand{\short}{\textit{Short Answer}}
+\newcommand{\mult}{%
+    \textit{Multiple Choice} 
+}
+\newcommand{\short}{%
+    \textit{Short Answer} 
+}
 \newcommand{\ans}[1]{%
     {\scshape \bfseries answer:}
     {\scshape #1}
