--- a/scibowl.sty
+++ b/scibowl.sty
@@ -54,7 +54,7 @@
 }
 \newcommand{\ans}[1]{%
     {\scshape \bfseries answer:}
-    {\scshape #1}
+    {\scshape \lowercase{#1}}
 }
 
 \newcommand{\hrulebar}{
