--- a/Templates/round-template.tex
+++ b/Templates/round-template.tex
@@ -13,7 +13,7 @@
 
 \setcounter{pnum}{-1}
 
-\toss{short-template}
-\bonus{mult-template}
+\toss{templates}{short-template}
+\bonus{templates}{mult-template}
 
 \end{document}
