--- a/Samples/sample-round.tex
+++ b/Samples/sample-round.tex
@@ -13,9 +13,9 @@
 
 \setcounter{pnum}{-1}
 
-\toss{short-example}
-\bonus{mult-example}
-\toss{short-example}
-\bonus{mult-example}
+\toss{examples}{short-example}
+\bonus{examples}{mult-example}
+\toss{examples}{short-example}
+\bonus{examples}{mult-example}
 
 \end{document}
